# certbot-dns-google-domains

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: google-domains-credentials.ini.age
.github/workflows/: ci.yml  release.yml  test.yml
certbot_dns_google_domains/: __init__.py  dns_google_domains.py  test_dns_google_domains.py
