[tool.poetry]
name = "certbot-dns-google-domains"
version = "0.1.4"
description = "Certbot DNS authenticator for Google Domains"
authors = ["Amir Omidi <amir@aaomidi.com>"]
license = "Apache 2.0"
readme = "README.md"
include = [
  "LICENSE",
]
packages = [
  { include = "certbot_dns_google_domains" }
]

[tool.poetry.dependencies]
python = ">=3.7.2"
certbot = ">=1.23.0"
"zope.interface" = ">=5.5.0"
dataclasses-json = "^0.5.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."certbot.plugins"]
dns-google-domains = "certbot_dns_google_domains.dns_google_domains:Authenticator"
